Add sasl export to karaf.bat
(cherry picked from commit 8f285d03661bb1961799043c098c723a8a0f96c6)